# TRDPTestingTool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SAS.md  SRS.md  tau_dnr_types.md  tau_marshall.md  tau_so_if.md  tau_tti.md  tau_tti_types.md  tau_xml.md  trdp_types.md
backend/: README.md  package-lock.json  package.json
backend/src/: engineController.js  server.js  trdpConfigLoader.js
docs/: pd_view_direction.md  tau_dnr.md  tau_dnr_types.md  tau_so_if.md  trdp_if_light.md  trdp_types.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ConfigurationsView.tsx  PdView.tsx
frontend/src/utils/: telegramNormalization.test.ts  telegramNormalization.ts
scripts/: build_and_run.sh
src/: main.cpp
src/config/: xml_loader.cpp  xml_loader.h
src/model/: dataset_model.h  sim_config.h
src/trdp/: pd_endpoint.cpp  pd_endpoint.h  trdp_session.cpp  trdp_session.h
src/ui/: screen_config_summary.cpp  screen_config_summary.h  tui_app.cpp  tui_app.h
src/util/: logging.cpp  logging.h
tests/: trdp_runtime_test.cpp  xml_loader_test.cpp
